# living-vault

./: .gitignore  AGENTS.md  CLAUDE.md  HOW-TO-USE.md  README.md  bash.exe.stackdump  pyproject.toml
.agent-memory/: config.json  session-summary.md
docs/: DEPLOY-PUBLIC-VAULT.md  PHASE-1-CHECKLIST.md  PHASE-10A-CHECKLIST.md  PHASE-10B-CHECKLIST.md  PHASE-11-CHECKLIST.md  PHASE-12-CHECKLIST.md  PHASE-13-CHECKLIST.md  PHASE-14-CHECKLIST.md  PHASE-9-CHECKLIST.md  RUN-MCP-SERVER.md  TODO-PHASE-2-SYNESTHESIA.md  VISION-DIARY-SEANCE.md  public-allowlist.txt
living_vault/: cli.py
scripts/: append_iteration.py  append_learnings.py  append_session_errors.py  bench_outcome.txt  bench_real_wiki.ps1  check_seance_up.ps1  dco_insert_belief_review.py  dco_inspect.py  deploy-public-vault.ps1  portfolio_dry_run.ps1  portfolio_smoke_with_public.ps1  render_3_variants.ps1  render_real_3d.ps1  smoke_real_queries.py  smoke_seance_real.ps1  spike_embeddings.py  spike_outcome.txt  start-seance-ui.ps1  start_seance.ps1  validate_3d_output.ps1
tests/: conftest.py  test_belief_evolution.py  test_cli.py  test_constellations.py  test_core_llm.py  test_core_llm_tools.py  test_db.py  test_db_migration.py  test_decay.py  test_embeddings.py  test_extract_voice_cli.py  test_graph.py  test_history.py  test_indexer.py  test_insights.py  test_layout.py  test_mcp_server.py  test_mcp_smoke.py  test_now_page.py  test_persona.py  test_persona_assemble.py  test_persona_distill.py  test_persona_stylometric.py  test_portfolio_config.py  test_portfolio_sync.py  test_privacy.py  test_privacy_regression.py  (+17 more)
(+80 files in other folders)
